Fixed overflowing code issues where those are now horizontally scrollable

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -162,5 +162,6 @@ footer nav {
 }
 
 code {
-  white-space: pre-wrap;
+  display: block;
+  overflow-x: auto;
 }
